--- a/src/pages/search-trip/search-trip.html
+++ b/src/pages/search-trip/search-trip.html
@@ -7,7 +7,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>SearchTrip</ion-title>
+      <button ion-button menuToggle>
+          <ion-icon name="menu"></ion-icon>
+      </button>
+    <ion-title>Search for a Trip</ion-title>
   </ion-navbar>
 
 </ion-header>
