--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the MyTripsPage page.
+  Generated template for the SettingsPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -10,7 +10,7 @@
       <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
       </button>
-    <ion-title>My Trips</ion-title>
+    <ion-title>SettingsPage</ion-title>
   </ion-navbar>
 
 </ion-header>
