--- a/src/pages/my-trips/my-trips.html
+++ b/src/pages/my-trips/my-trips.html
@@ -17,5 +17,6 @@
 
 
 <ion-content padding>
-
+    <button ion-button color="light" (click)="AddTrip()">ADD TRIP</button>
+    <button ion-button color="light" (click)="PlacesVisited()">Barcelona</button>
 </ion-content>
