--- a/src/pages/add-place/add-place.html
+++ b/src/pages/add-place/add-place.html
@@ -14,5 +14,6 @@
 
 
 <ion-content padding>
-
+    <button ion-button color="light" (click)="takePicture()">ADD PICTURE</button>
+    <img *ngIf='pictureData' src='data:image/jpeg;base64,{{ pictureData }}' />
 </ion-content>
