--- a/src/pages/add-place/add-place.html
+++ b/src/pages/add-place/add-place.html
@@ -52,7 +52,7 @@
 
       <ion-row>
         <ion-col class="signup-col">
-          <button ion-button class="submit-btn" full type="submit" [disabled]="!createPlaceForm.form.valid">Save</button>
+          <button ion-button class="submit-btn" full type="submit" [disabled]="!createPlaceForm.form.valid || !locationAdded">Save</button>
         </ion-col>
       </ion-row>
 
